# elektroagregat

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  mgelectronic.rs  mikroprinc.rs  scraping.rs
src/scraping/: mgelectronic.rs  mikroprinc.rs
templates/: base.html  landing.html  navbar.html  search.html
