[package]
name = "elektroagregat"
version = "0.1.0"
edition = "2024"

[dependencies]
# axum = "0.8.1"
# askama = "0.12.1"
# askama_web = { version = "0.0.1-pre.0", features = ["axum-0.8"] }
# tower-http = { version = "0.6.2", features = ["fs", "compression-br"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.15", features = ["brotli"] }
scraper = "0.23.1"
thiserror = "2.0.12"
itertools = "0.14.0"
# regex = "1.11.1"
# openssl = { version = "*", features = ["vendored"] }
